--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,7 +7,7 @@
   flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
-  font-size: clamp(1rem, 1rem + 1vw, 2.4rem);
+  font-size: clamp(1.4rem, 1rem + 1vw, 2.4rem);
 }
 .main__sectionA {
   position: relative;
@@ -86,6 +86,7 @@
     margin: 0;
     justify-content: start;
     align-items: start;
+    padding: clamp(1.4em, 1em + 1vw, 2em);
   }
   .main__sectionA__title, .main__sectionA__subtitle {
     margin: 0;
@@ -98,5 +99,6 @@
     margin: 0;
     justify-content: start;
     align-items: start;
+    padding: clamp(1.4em, 1em + 1vw, 2em);
   }
 }/*# sourceMappingURL=main.css.map */
