--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,7 +7,7 @@
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
-    font-size: clamp(1rem, 1rem + 1vw, 2.4rem);
+    font-size: clamp(1.4rem, 1rem + 1vw, 2.4rem);
 
     &__sectionA {
         position: relative;
@@ -95,6 +95,7 @@
             margin: 0;
             justify-content: start;
             align-items: start;
+            padding: clamp(1.4em, 1em + 1vw, 2em);
 
             &__title,
             &__subtitle {
@@ -110,6 +111,7 @@
             margin: 0;
             justify-content: start;
             align-items: start;
+            padding: clamp(1.4em, 1em + 1vw, 2em);
         }
     }
 }
