--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -12,7 +12,7 @@
     &__sectionA {
         position: relative;
         left: 8%;
-        color: black;
+        color: rgb(40, 40, 40);
         background: rgba(255, 255, 255, .8);
         border-radius: 21% 79% 70% 30%/ 59% 41% 59% 41%;
         padding: 4em;
